# simulator_ui

./: .gitignore  pyproject.toml  test_data.json  test_data_2.json
bs_ui/: main.py  qml.py
bs_ui/components/: ControlPanel.py  DisplayPanel.py  Graph.py  ImportPanel.py
bs_ui/devices/: simulator.py
bs_ui/qml/: main.qml
inhalation_profiles/: 40_4.csv  40_5.csv  40_6.csv  60_3.csv  60_4.csv  60_5.csv  80_2.csv  80_3.csv  80_4.csv
simuflow/: __init__.py  __main__.py  configuration.py  packet.py
simuflow/components/: ConfigPanel.py  ControlPanel.py  DisplayPanel.py  Graph.py  ImportPanel.py
simuflow/devices/: simulator.py
simuflow/messages/: flow_definition.pb.c  flow_definition.pb.h  flow_definition.proto  flow_definition_pb2.py  flow_definition_pb2.pyi  message_funcs.py  nanopb_pb2.py
simuflow/simuflow.dist-info/: METADATA
tests/: Data Analysis.ipynb  Untitled.ipynb  dynamic_print.py  dynamic_profile.py  echo.py  list_coms.py  proto_tests.py  simple_print.py  test_bs_ui.py
tests/measurements/: const_9hv_l298n_10_5000.json  const_9hv_l298n_20_5000.json  const_9hv_l298n_30_5000.json  const_9hv_l298n_40_5000.json  const_9hv_l298n_50_5000.json  const_9hv_l298n_60_5000.json  const_9hv_l298n_70_5000.json  const_9hv_l298n_80_5000.json  const_9hv_spark_100_5000.json  const_9hv_spark_10_5000.json  const_9hv_spark_20_5000.json  const_9hv_spark_30_5000.json  const_9hv_spark_40_5000.json  const_9hv_spark_50_5000.json  const_9hv_spark_60_5000.json  const_9hv_spark_70_5000.json  const_9hv_spark_80_5000.json  const_9hv_spark_90_5000.json  const_impeller_l298n_10_5000.json  const_impeller_l298n_20_5000.json  const_impeller_l298n_30_5000.json  const_impeller_l298n_40_5000.json  const_impeller_l298n_50_5000.json  const_impeller_l298n_60_5000.json  const_vacuum_l298n_100_5000.json  (+100 more)
